--- a/faculty-home.html
+++ b/faculty-home.html
@@ -167,9 +167,14 @@
         </div>
       </div>
 
-      <div id="meetingScreen" style="display: none; flex: 1; background-color: black;">
-        <div id="remoteVideos" class="videoBoxList" style="background-color: black;"></div>
-        <video id="activeVideo" autoplay playsinline style="background-color: black;" muted="muted"></video>
+      <div id="meetingScreen" style="display: none; flex: 1; background-color: black;" class="text-center">
+        <div style="display: flex; flex-direction: column; flex-wrap: wrap;">
+          <div id="remoteVideos" class="videoBoxList"
+            style="flex: 0; background-color:#312a2a; justify-content: center;"></div>
+          <div style="flex: 1;">
+            <video id="activeVideo" autoplay playsinline style="background-color: black;" muted="muted"></video>
+          </div>
+        </div>
         <div>
           <video id="activeScreenShare" class="miniVideoStream" autoplay playsinline muted="muted"
             style="position: absolute; left: 7px; top: 100px; width: 70px; height: 70px;">
