--- a/student-home.html
+++ b/student-home.html
@@ -110,8 +110,8 @@
         </ul>
       </div>
 
-      <div id="meetingScreen" style="display: none; flex: 1;">
-        <div id="remoteVideos" class="videoBoxList" style="background-color: black;"></div>
+      <div id="meetingScreen" style="display: none; flex: 1; background-color: black;" class="text-center">
+        <div id="remoteVideos" class="videoBoxList" style="background-color:#312a2a; justify-content: center;"></div>
         <video id="activeVideo" autoplay playsinline style="background-color: black;" muted="muted"></video>
         <div>
           <video id="activeScreenShare" class="miniVideoStream" autoplay playsinline muted="muted"
