--- a/faculty-home.html
+++ b/faculty-home.html
@@ -167,10 +167,10 @@
         </div>
       </div>
 
-      <div id="meetingScreen" style="display: none; flex: 1; background-color: black;" class="text-center">
+      <div id="meetingScreen" style="display: none; flex: 1;" class="text-center">
         <div style="display: flex; flex-direction: column; flex-wrap: wrap;">
-          <div id="remoteVideos" class="videoBoxList"
-            style="flex: 0; background-color:#312a2a; justify-content: center;"></div>
+          <div id="remoteVideos" class="videoBoxList" style="flex: 0; background-color:black; justify-content: center;">
+          </div>
           <div style="flex: 1;">
             <video id="activeVideo" autoplay playsinline style="background-color: black;" muted="muted"></video>
           </div>
