--- a/schoolstaff-home.html
+++ b/schoolstaff-home.html
@@ -122,8 +122,8 @@
         </ul>
       </div>
 
-      <div id="meetingScreen" style="display: none; background-color: black;" class="text-center">
-        <div id="remoteVideos" class="videoBoxList" style="background-color:#312a2a; justify-content: center;"></div>
+      <div id="meetingScreen" style="display: none; flex: 1;" class="text-center">
+        <div id="remoteVideos" class="videoBoxList" style="background-color:black; justify-content: center;"></div>
         <video id="activeVideo" autoplay playsinline style="background-color: black;" muted="muted"></video>
         <div>
           <video id="activeScreenShare" class="miniVideoStream" autoplay playsinline muted="muted"
